--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
 <body>
 
+  <H1>I can push to github</H1>
+  <h2> Mama I can code now </h2>
+  <h3> New code changed </h3>
 
 
-  
 </body>
 
 </html>
